--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@inertiajs/react": "^1.2.0",
         "cross-env": "^7.0.3",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "ziggy-js": "^2.4.1"
     }
 }
